--- a/package.json
+++ b/package.json
@@ -3,18 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 5000",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.5.1",
     "@ant-design/nextjs-registry": "^1.0.1",
     "@ant-design/pro-components": "^2.8.1",
-    "antd": "^5.21.6",
-    "next": "15.0.2",
-    "react": "19.0.0-rc-02c0e824-20241028",
-    "react-dom": "19.0.0-rc-02c0e824-20241028",
+    "@ant-design/pro-form": "^2.31.1",
+    "@ant-design/pro-skeleton": "^2.2.1",
+    "@ant-design/pro-utils": "^2.16.1",
+    "antd": "^5.17.0",
+    "axios": "^1.7.7",
+    "next": "14.2.3",
+    "react": "^18",
+    "react-dom": "^18",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
