--- a/package.json
+++ b/package.json
@@ -15,14 +15,20 @@
     "@ant-design/pro-form": "^2.31.1",
     "@ant-design/pro-skeleton": "^2.2.1",
     "@ant-design/pro-utils": "^2.16.1",
+    "@tanstack/react-query": "^5.59.19",
+    "@tanstack/react-query-devtools": "^5.59.19",
     "antd": "^5.17.0",
     "axios": "^1.7.7",
+    "lodash": "^4.17.21",
     "next": "14.2.3",
+    "notification-frontend": "file:",
+    "rc-field-form": "^2.5.0",
     "react": "^18",
     "react-dom": "^18",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.13",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
