--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "rc-field-form": "^2.5.0",
     "react": "^18",
     "react-dom": "^18",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.8.1",
+    "uuid": "^11.0.2"
   },
   "devDependencies": {
     "@types/lodash": "^4.17.13",
