--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tanstack/react-query-devtools": "^5.59.19",
     "antd": "^5.17.0",
     "axios": "^1.7.7",
+    "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "next": "14.2.3",
     "notification-frontend": "file:",
